# ReputeX

./: .gitignore  ADMIN_GUIDE.md  DEPLOYMENT.md  README.md  TRADER_GUIDE.md  TROUBLESHOOTING.md
frontend/: app.js  index.html  live-devnet.html  live-devnet.js  package-lock.json  package.json  styles.css
frontend/public/idl/: reputex.json
frontend/src/: App.jsx  main.jsx  react.css
frontend/src/config/: markets.js
frontend/src/hooks/: useLiveTrading.js  useMarketData.js
frontend/src/lib/: format.js  perps.js  (+1 more)
program/: .prettierignore  Anchor.toml  DEPLOYMENT.md  README.md  package.json
program/programs/reputex/: Cargo.toml
program/programs/reputex/src/: constants.rs  errors.rs  events.rs  lib.rs
program/programs/reputex/src/instructions/: close_position.rs  configure_market_oracle.rs  configure_market_risk.rs  create_trader_profile.rs  deposit_collateral.rs  fund_insurance.rs  initialize_market.rs  initialize_protocol.rs  liquidate_position.rs  mod.rs  open_position.rs  set_protocol_paused.rs  settle_funding.rs  update_funding_rate.rs  update_market_price.rs  update_market_price_from_pyth.rs  withdraw_collateral.rs
program/programs/reputex/src/state/: margin_account.rs  market.rs  mod.rs  position.rs  protocol.rs  trader_profile.rs
program/programs/reputex/src/utils/: math.rs
program/scripts/: bootstrap_devnet.ts  demo_trade.js  demo_trade.ts  disable_oracle.ts  funding_keeper.ts  live_terminal.ts  mint_test_collateral.ts  provider.ts  update_price.ts
program/tests/: reputex.ts
tools/solana-release/: .crates.toml  .crates2.json  version.yml
(+8 files in other folders)
