[package]
name = "reputex"
version = "0.1.0"
description = "Perps DEX with On-Chain Trader Reputation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reputex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
pyth = ["dep:pyth-solana-receiver-sdk"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
pyth-solana-receiver-sdk = { version = "1.2.0", optional = true }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
